modifications for docker to be functional